@@ -1135,7 +1135,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <inherited>true</inherited>
         <configuration>
-          <argLine>@{surefireArgLine} @{testAdditionalRuntimeArgLine}</argLine>
+          <argLine>${surefireArgLine} ${testAdditionalRuntimeArgLine}</argLine>
           <jvm>${test.jvm.path}</jvm>
         </configuration>
       </plugin>
@@ -1412,7 +1412,7 @@
         <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
         <jacoco.version>0.8.0</jacoco.version>
         <compiler.plugin.version>3.7.0</compiler.plugin.version>
-        <surefire.version>2.21.0</surefire.version>
+        <surefire.version>3.0-SNAPSHOT</surefire.version>
       </properties>
     </profile>
     <profile>
@@ -1437,7 +1437,7 @@
         <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
         <jacoco.version>0.8.0</jacoco.version>
         <compiler.plugin.version>3.7.0</compiler.plugin.version>
-        <surefire.version>2.21.0</surefire.version>
+        <surefire.version>3.0-SNAPSHOT</surefire.version>
       </properties>
     </profile>
     <profile>
@@ -1462,7 +1462,7 @@
         <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
         <jacoco.version>0.8.0</jacoco.version>
         <compiler.plugin.version>3.7.0</compiler.plugin.version>
-        <surefire.version>2.21.0</surefire.version>
+        <surefire.version>3.0-SNAPSHOT</surefire.version>
       </properties>
     </profile>
     <profile>
@@ -1471,23 +1471,14 @@
         <jdk>1.8</jdk>
       </activation>
       <properties>
-        <testAdditionalRuntimeArgLine>--add-modules
-					java.xml.bind,ALL-MODULE-PATH --add-exports
-					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
-					java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
-					java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED
-					--add-exports
-					java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED
-					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
-					java.base/java.lang=ALL-UNNAMED --add-opens
-					java.base/java.lang.reflect=ALL-UNNAMED</testAdditionalRuntimeArgLine>
-        <test.jvm.path>/usr/lib/jvm/java-9-oracle/bin/java</test.jvm.path>
+        <testAdditionalRuntimeArgLine></testAdditionalRuntimeArgLine>
+        <test.jvm.path>/usr/lib/jvm/java-8-oracle/bin/java</test.jvm.path>
         <jdk.src.version>1.8</jdk.src.version>
         <jdk.target.version>1.8</jdk.target.version>
         <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
         <jacoco.version>0.8.0</jacoco.version>
         <compiler.plugin.version>3.7.0</compiler.plugin.version>
-        <surefire.version>2.21.0</surefire.version>
+        <surefire.version>3.0-SNAPSHOT</surefire.version>
       </properties>
     </profile>
     <profile>
